FIX Prevents horizontal scrollbar in non-firefox
refines #7b430d4 hide elements inside chosen-container if not active

--- a/client/src/styles/legacy/_preview.scss
+++ b/client/src/styles/legacy/_preview.scss
@@ -108,11 +108,14 @@
       width: auto !important;
     }
 
-    .chosen-drop{
+    .chosen-drop {
       padding: 0;
       margin-top: -5px;
       border: 1px solid $dropdown-border-color;
       box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+      // width & right prevent overflow with non-firefox #1422
+      width: inherit;
+      right: 0;
 
       ul.chosen-results {
         padding: $dropdown-padding-y 0;
